// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders new study view correctly --  with error on submit 1`] = `
<body>
  <div
    class="ui large top attached menu"
  >
    <div
      class="ui container"
    >
      <div
        class="item"
      >
        <img
          alt="Kids First logo"
          src="test-file-stub"
        />
      </div>
      <a
        aria-current="page"
        class="header item"
        href="/"
      >
        Data Tracker
      </a>
      <a
        class="item"
        href="/"
      >
        Studies
      </a>
      <div
        class="right menu"
      >
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          Admin
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              class="item"
              href="/tokens"
              role="option"
            >
              <i
                aria-hidden="true"
                class="key icon"
              />
              Developer Tokens
            </a>
            <a
              class="item"
              href="/cavatica-projects"
              role="option"
            >
              <i
                aria-hidden="true"
                class="folder open icon"
              />
              Cavatica Projects
            </a>
            <a
              class="item"
              href="/events"
              role="option"
            >
              <i
                aria-hidden="true"
                class="history icon"
              />
              Event Log
            </a>
          </div>
        </div>
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          <img
            alt="bendolly"
            class="ui avatar image"
            src="https://lh3.googleusercontent.com/-7Agefge42sw/AAAAAAAAAAI/AAAAAAAAAAA/ACHi3reWt8KI4nO_arpKCb4FzokaKnLgtg/mo/photo.jpg"
          />
          bendolly
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              class="item"
              href="/profile"
              role="option"
            >
              <i
                aria-hidden="true"
                class="user icon"
              />
              Profile
            </a>
            <a
              class="item"
              href="/logout"
              role="option"
            >
              <i
                aria-hidden="true"
                class="log out icon"
              />
              Logout
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="page"
  >
    <div
      class="ui basic vertical segment ui container"
    >
      <div
        class="ui basic vertical segment ui container"
      >
        <h3
          class="ui header"
        >
          Tell us about your new study
        </h3>
        <p
          class="text-wrap-75"
        >
          We'll setup a new study for you by registering it in the Kids First system and initializing all the necessary systems. You can come after the study has been created to make changes at any time.
        </p>
      </div>
      <div
        class="ui icon negative message"
      >
        <i
          aria-hidden="true"
          class="attention icon"
        />
        <div
          class="content"
        >
          <div
            class="header"
          >
            Error
          </div>
          <p>
            Network error: Failed to create the new study
          </p>
        </div>
      </div>
      <div
        class="ui fluid top attached three steps"
      >
        <a
          class="link step"
        >
          <i
            aria-hidden="true"
            class="info circular icon"
          />
          <div
            class="content"
          >
            <div
              class="title"
            >
              Info
            </div>
            <div
              class="description"
            >
              General Study Details
            </div>
          </div>
        </a>
        <a
          class="link step"
        >
          <i
            aria-hidden="true"
            class="disk circular icon"
          />
          <div
            class="content"
          >
            <div
              class="title"
            >
              External
            </div>
            <div
              class="description"
            >
              For dbGaP project
            </div>
          </div>
        </a>
        <a
          class="active link step"
        >
          <i
            aria-hidden="true"
            class="calendar check circular icon"
          />
          <div
            class="content"
          >
            <div
              class="title"
            >
              Logistics
            </div>
            <div
              class="description"
            >
              Scheduling & Collection
            </div>
          </div>
        </a>
      </div>
      <div
        class="ui clearing attached padded segment"
      >
        <form
          class="ui form"
        >
          <h4
            class="ui header text-wrap-75"
          >
            Provide details about the Kids First grant that this study was awarded.
          </h4>
          <div
            class="field"
          >
            <label
              class="noMargin"
            >
              Release Date
              :
            </label>
            <p
              class="noMargin"
            >
              <small>
                The anticipated date on which this study's data will be made public in Kids First.
              </small>
            </p>
            <div
              class="ui fluid input noMargin"
            >
              <input
                aria-label="releaseDate"
                name="releaseDate"
                type="date"
                value=""
              />
            </div>
          </div>
          <div
            class="field"
          >
            <label
              class="noMargin"
            >
              Number of anticipated samples
              :
            </label>
            <p
              class="noMargin"
            >
              <small>
                The anticipated number of samples awarded for sequencing for the study.
              </small>
            </p>
            <div
              class="ui fluid input noMargin"
            >
              <input
                aria-label="anticipatedSamples"
                name="anticipatedSamples"
                type="number"
                value="0"
              />
            </div>
          </div>
          <div
            class="field"
          >
            <label
              class="noMargin"
            >
              Awardee organization
              :
            </label>
            <p
              class="noMargin"
            >
              <small>
                The organization responsible for this study.
              </small>
            </p>
            <div
              class="ui fluid input noMargin"
            >
              <input
                aria-label="awardeeOrganization"
                name="awardeeOrganization"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="field"
          >
            <label
              class="noMargin"
            >
              Description
              :
            </label>
            <p
              class="noMargin"
            >
              <small>
                Study description in markdown, commonly the X01 abstract text.
              </small>
            </p>
            <div
              class="field noMargin"
            >
              <textarea
                name="description"
                rows="15"
                type="text"
              />
            </div>
          </div>
          <button
            class="ui icon left floated left labeled button"
            type="button"
          >
            <i
              aria-hidden="true"
              class="left arrow icon"
            />
            PREVIOUS
          </button>
          <button
            class="ui primary right floated button"
            type="button"
          >
            SUBMIT
          </button>
        </form>
      </div>
    </div>
  </div>
  <div
    class="ui segment footer"
  >
    <div
      class="ui container text-10"
    >
      <div
        class="ui horizontal list"
        role="list"
      >
        <div
          class="item"
          role="listitem"
        >
          <div
            class="ui basic horizontal label text-10"
          />
        </div>
        <div
          class="item"
          role="listitem"
        >
          UI
           
          <a
            href="https://github.com/kids-first/kf-ui-data-tracker/commit/undefined"
            rel="noopener noreferrer"
            target="_blank"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`renders new study view correctly 1`] = `
<body>
  <div
    class="ui large top attached menu"
  >
    <div
      class="ui container"
    >
      <div
        class="item"
      >
        <img
          alt="Kids First logo"
          src="test-file-stub"
        />
      </div>
      <a
        aria-current="page"
        class="header item"
        href="/"
      >
        Data Tracker
      </a>
    </div>
  </div>
  <div
    class="page"
  >
    <div
      class="ui basic vertical segment ui container"
    >
      <div
        class="ui basic vertical segment ui container"
      >
        <h3
          class="ui header"
        >
          Tell us about your new study
        </h3>
        <p
          class="text-wrap-75"
        >
          We'll setup a new study for you by registering it in the Kids First system and initializing all the necessary systems. You can come after the study has been created to make changes at any time.
        </p>
      </div>
      <div
        class="ui fluid top attached three steps"
      >
        <a
          class="active link step"
        >
          <i
            aria-hidden="true"
            class="info circular icon"
          />
          <div
            class="content"
          >
            <div
              class="title"
            >
              Info
            </div>
            <div
              class="description"
            >
              General Study Details
            </div>
          </div>
        </a>
        <a
          class="link step"
        >
          <i
            aria-hidden="true"
            class="disk circular icon"
          />
          <div
            class="content"
          >
            <div
              class="title"
            >
              External
            </div>
            <div
              class="description"
            >
              For dbGaP project
            </div>
          </div>
        </a>
        <a
          class="link step"
        >
          <i
            aria-hidden="true"
            class="calendar check circular icon"
          />
          <div
            class="content"
          >
            <div
              class="title"
            >
              Logistics
            </div>
            <div
              class="description"
            >
              Scheduling & Collection
            </div>
          </div>
        </a>
      </div>
      <div
        class="ui clearing attached padded segment"
      >
        <form
          class="ui form"
        >
          <h4
            class="ui header text-wrap-75"
          >
            Please provide the study's full name and a shortened version that may be used for display purposes.
          </h4>
          <div
            class="required field"
          >
            <label
              class="noMargin"
            >
              Study Name
              :
            </label>
            <p
              class="noMargin"
            >
              <small>
                Full name of the study, often the full title of the X01 grant application.
              </small>
            </p>
            <div
              class="ui fluid input noMargin"
            >
              <input
                aria-label="name"
                name="name"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="field"
          >
            <label
              class="noMargin"
            >
              Study Short Name
              :
            </label>
            <p
              class="noMargin"
            >
              <small>
                The name that will appear under portal facets.
              </small>
            </p>
            <div
              class="ui fluid input noMargin"
            >
              <input
                aria-label="shortName"
                name="shortName"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="field"
          >
            <label
              class="noMargin"
            >
              Cavatica Projects
              :
            </label>
            <p
              class="noMargin"
            >
              <small>
                Workflow projects to be instantiated for the new study.
              </small>
            </p>
            <div
              aria-expanded="false"
              aria-multiselectable="true"
              class="ui fluid multiple selection dropdown"
              id="workflowType"
              name="workflowType"
              role="listbox"
              tabindex="0"
            >
              <a
                class="ui label"
                value="bwa_mem"
              >
                bwa_mem
                <i
                  aria-hidden="true"
                  class="delete icon"
                />
              </a>
              <a
                class="ui label"
                value="gatk_haplotypecaller"
              >
                GATK Haplotypecaller
                <i
                  aria-hidden="true"
                  class="delete icon"
                />
              </a>
              <div
                aria-live="polite"
                class="text"
                role="alert"
              />
              <i
                aria-hidden="true"
                class="dropdown icon clear"
              />
              <div
                class="menu transition"
              >
                <div
                  aria-checked="false"
                  aria-selected="true"
                  class="selected item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    bwa_mem_bqsr
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    star_2_pass
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    GATK Genotypgvcf
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    GATK GenotypeGVCF VQSR
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Strelka2 Somatic Mode
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    MuTect2 Somatic Mode
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    MuTect2 Tumor Only Mode
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    VarDict Single Sample Mode
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    VarDict Paired Sample Mode
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Control FREEC Somatic Mode
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Control FREEC Germline Mode
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    StringTie Expression
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Manta Somatic
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Manta Germline
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    LUMPY Somatic
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    LUMPY Germline
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    RSEM
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Kallisto
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Star Fusion
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Arriba
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    peddy
                  </span>
                </div>
              </div>
            </div>
          </div>
          <button
            class="ui icon right floated right labeled button"
            type="button"
          >
            <i
              aria-hidden="true"
              class="right arrow icon"
            />
            NEXT
          </button>
          <button
            class="ui primary disabled right floated button"
            disabled=""
            tabindex="-1"
            type="button"
          >
            SUBMIT
          </button>
        </form>
      </div>
    </div>
  </div>
  <div
    class="ui segment footer"
  >
    <div
      class="ui container text-10"
    >
      <div
        class="ui horizontal list"
        role="list"
      >
        <div
          class="item"
          role="listitem"
        >
          <div
            class="ui basic horizontal label text-10"
          />
        </div>
        <div
          class="item"
          role="listitem"
        >
          UI
           
          <a
            href="https://github.com/kids-first/kf-ui-data-tracker/commit/undefined"
            rel="noopener noreferrer"
            target="_blank"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`renders new study view correctly 2`] = `
<body>
  <div
    class="ui large top attached menu"
  >
    <div
      class="ui container"
    >
      <div
        class="item"
      >
        <img
          alt="Kids First logo"
          src="test-file-stub"
        />
      </div>
      <a
        aria-current="page"
        class="header item"
        href="/"
      >
        Data Tracker
      </a>
    </div>
  </div>
  <div
    class="page"
  >
    <div
      class="ui basic vertical segment ui container"
    >
      <div
        class="ui basic vertical segment ui container"
      >
        <h3
          class="ui header"
        >
          Tell us about your new study
        </h3>
        <p
          class="text-wrap-75"
        >
          We'll setup a new study for you by registering it in the Kids First system and initializing all the necessary systems. You can come after the study has been created to make changes at any time.
        </p>
      </div>
      <div
        class="ui fluid top attached three steps"
      >
        <a
          class="link step"
        >
          <i
            aria-hidden="true"
            class="info circular icon"
          />
          <div
            class="content"
          >
            <div
              class="title"
            >
              Info
            </div>
            <div
              class="description"
            >
              General Study Details
            </div>
          </div>
        </a>
        <a
          class="active link step"
        >
          <i
            aria-hidden="true"
            class="disk circular icon"
          />
          <div
            class="content"
          >
            <div
              class="title"
            >
              External
            </div>
            <div
              class="description"
            >
              For dbGaP project
            </div>
          </div>
        </a>
        <a
          class="link step"
        >
          <i
            aria-hidden="true"
            class="calendar check circular icon"
          />
          <div
            class="content"
          >
            <div
              class="title"
            >
              Logistics
            </div>
            <div
              class="description"
            >
              Scheduling & Collection
            </div>
          </div>
        </a>
      </div>
      <div
        class="ui clearing attached padded segment"
      >
        <form
          class="ui form"
        >
          <h4
            class="ui header text-wrap-75"
          >
            If the study is a dbGaP project, additional information is needed to ensure access is granted correctly. For non-dbGaP studies, an external identifier which this study may otherwise be known by is required.
          </h4>
          <div
            class="required field"
          >
            <label
              class="noMargin"
            >
              External ID
              :
            </label>
            <p
              class="noMargin"
            >
              <small>
                Identifier used by external systems, often the PHS ID if the study is registered with dbGaP.
              </small>
            </p>
            <div
              class="ui fluid input noMargin"
            >
              <input
                aria-label="externalId"
                name="externalId"
                placeholder="Example: phs000178"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="field"
          >
            <label
              class="noMargin"
            >
              dbGaP Version
              :
            </label>
            <p
              class="noMargin"
            >
              <small>
                Study version, often the provided by the data access authority.
              </small>
            </p>
            <div
              class="ui fluid input noMargin"
            >
              <input
                aria-label="version"
                name="version"
                placeholder="Example: v1.p1"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="field"
          >
            <label
              class="noMargin"
            >
              Attribution
              :
            </label>
            <p
              class="noMargin"
            >
              <small>
                The URL providing more information about the study.
              </small>
            </p>
            <div
              class="ui fluid input noMargin"
            >
              <input
                aria-label="attribution"
                name="attribution"
                placeholder=""
                type="text"
                value=""
              />
            </div>
          </div>
          <button
            class="ui icon left floated left labeled button"
            type="button"
          >
            <i
              aria-hidden="true"
              class="left arrow icon"
            />
            PREVIOUS
          </button>
          <button
            class="ui icon right floated right labeled button"
            type="button"
          >
            <i
              aria-hidden="true"
              class="right arrow icon"
            />
            NEXT
          </button>
          <button
            class="ui primary disabled right floated button"
            disabled=""
            tabindex="-1"
            type="button"
          >
            SUBMIT
          </button>
        </form>
      </div>
    </div>
  </div>
  <div
    class="ui segment footer"
  >
    <div
      class="ui container text-10"
    >
      <div
        class="ui horizontal list"
        role="list"
      >
        <div
          class="item"
          role="listitem"
        >
          <div
            class="ui basic horizontal label text-10"
          />
        </div>
        <div
          class="item"
          role="listitem"
        >
          UI
           
          <a
            href="https://github.com/kids-first/kf-ui-data-tracker/commit/undefined"
            rel="noopener noreferrer"
            target="_blank"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`renders new study view correctly 3`] = `
<body>
  <div
    class="ui large top attached menu"
  >
    <div
      class="ui container"
    >
      <div
        class="item"
      >
        <img
          alt="Kids First logo"
          src="test-file-stub"
        />
      </div>
      <a
        aria-current="page"
        class="header item"
        href="/"
      >
        Data Tracker
      </a>
      <a
        class="item"
        href="/"
      >
        Studies
      </a>
      <div
        class="right menu"
      >
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          Admin
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              class="item"
              href="/tokens"
              role="option"
            >
              <i
                aria-hidden="true"
                class="key icon"
              />
              Developer Tokens
            </a>
            <a
              class="item"
              href="/cavatica-projects"
              role="option"
            >
              <i
                aria-hidden="true"
                class="folder open icon"
              />
              Cavatica Projects
            </a>
            <a
              class="item"
              href="/events"
              role="option"
            >
              <i
                aria-hidden="true"
                class="history icon"
              />
              Event Log
            </a>
          </div>
        </div>
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          <img
            alt="bendolly"
            class="ui avatar image"
            src="https://lh3.googleusercontent.com/-7Agefge42sw/AAAAAAAAAAI/AAAAAAAAAAA/ACHi3reWt8KI4nO_arpKCb4FzokaKnLgtg/mo/photo.jpg"
          />
          bendolly
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              class="item"
              href="/profile"
              role="option"
            >
              <i
                aria-hidden="true"
                class="user icon"
              />
              Profile
            </a>
            <a
              class="item"
              href="/logout"
              role="option"
            >
              <i
                aria-hidden="true"
                class="log out icon"
              />
              Logout
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="page"
  >
    <div
      class="ui basic vertical segment ui container"
    >
      <div
        class="ui basic vertical segment ui container"
      >
        <h3
          class="ui header"
        >
          Tell us about your new study
        </h3>
        <p
          class="text-wrap-75"
        >
          We'll setup a new study for you by registering it in the Kids First system and initializing all the necessary systems. You can come after the study has been created to make changes at any time.
        </p>
      </div>
      <div
        class="ui fluid top attached three steps"
      >
        <a
          class="link step"
        >
          <i
            aria-hidden="true"
            class="info circular icon"
          />
          <div
            class="content"
          >
            <div
              class="title"
            >
              Info
            </div>
            <div
              class="description"
            >
              General Study Details
            </div>
          </div>
        </a>
        <a
          class="link step"
        >
          <i
            aria-hidden="true"
            class="disk circular icon"
          />
          <div
            class="content"
          >
            <div
              class="title"
            >
              External
            </div>
            <div
              class="description"
            >
              For dbGaP project
            </div>
          </div>
        </a>
        <a
          class="active link step"
        >
          <i
            aria-hidden="true"
            class="calendar check circular icon"
          />
          <div
            class="content"
          >
            <div
              class="title"
            >
              Logistics
            </div>
            <div
              class="description"
            >
              Scheduling & Collection
            </div>
          </div>
        </a>
      </div>
      <div
        class="ui clearing attached padded segment"
      >
        <form
          class="ui form"
        >
          <h4
            class="ui header text-wrap-75"
          >
            Provide details about the Kids First grant that this study was awarded.
          </h4>
          <div
            class="field"
          >
            <label
              class="noMargin"
            >
              Release Date
              :
            </label>
            <p
              class="noMargin"
            >
              <small>
                The anticipated date on which this study's data will be made public in Kids First.
              </small>
            </p>
            <div
              class="ui fluid input noMargin"
            >
              <input
                aria-label="releaseDate"
                name="releaseDate"
                type="date"
                value=""
              />
            </div>
          </div>
          <div
            class="field"
          >
            <label
              class="noMargin"
            >
              Number of anticipated samples
              :
            </label>
            <p
              class="noMargin"
            >
              <small>
                The anticipated number of samples awarded for sequencing for the study.
              </small>
            </p>
            <div
              class="ui fluid input noMargin"
            >
              <input
                aria-label="anticipatedSamples"
                name="anticipatedSamples"
                type="number"
                value="0"
              />
            </div>
          </div>
          <div
            class="field"
          >
            <label
              class="noMargin"
            >
              Awardee organization
              :
            </label>
            <p
              class="noMargin"
            >
              <small>
                The organization responsible for this study.
              </small>
            </p>
            <div
              class="ui fluid input noMargin"
            >
              <input
                aria-label="awardeeOrganization"
                name="awardeeOrganization"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="field"
          >
            <label
              class="noMargin"
            >
              Description
              :
            </label>
            <p
              class="noMargin"
            >
              <small>
                Study description in markdown, commonly the X01 abstract text.
              </small>
            </p>
            <div
              class="field noMargin"
            >
              <textarea
                name="description"
                rows="15"
                type="text"
              />
            </div>
          </div>
          <button
            class="ui icon left floated left labeled button"
            type="button"
          >
            <i
              aria-hidden="true"
              class="left arrow icon"
            />
            PREVIOUS
          </button>
          <button
            class="ui primary right floated button"
            type="button"
          >
            SUBMIT
          </button>
        </form>
      </div>
    </div>
  </div>
  <div
    class="ui segment footer"
  >
    <div
      class="ui container text-10"
    >
      <div
        class="ui horizontal list"
        role="list"
      >
        <div
          class="item"
          role="listitem"
        >
          <div
            class="ui basic horizontal label text-10"
          />
        </div>
        <div
          class="item"
          role="listitem"
        >
          UI
           
          <a
            href="https://github.com/kids-first/kf-ui-data-tracker/commit/undefined"
            rel="noopener noreferrer"
            target="_blank"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`renders new study view correctly 4`] = `
<body
  class="dimmable dimmed"
>
  <div
    class="ui large top attached menu"
  >
    <div
      class="ui container"
    >
      <div
        class="item"
      >
        <img
          alt="Kids First logo"
          src="test-file-stub"
        />
      </div>
      <a
        aria-current="page"
        class="header item"
        href="/"
      >
        Data Tracker
      </a>
      <a
        class="item"
        href="/"
      >
        Studies
      </a>
      <div
        class="right menu"
      >
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          Admin
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              class="item"
              href="/tokens"
              role="option"
            >
              <i
                aria-hidden="true"
                class="key icon"
              />
              Developer Tokens
            </a>
            <a
              class="item"
              href="/cavatica-projects"
              role="option"
            >
              <i
                aria-hidden="true"
                class="folder open icon"
              />
              Cavatica Projects
            </a>
            <a
              class="item"
              href="/events"
              role="option"
            >
              <i
                aria-hidden="true"
                class="history icon"
              />
              Event Log
            </a>
          </div>
        </div>
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          <img
            alt="bendolly"
            class="ui avatar image"
            src="https://lh3.googleusercontent.com/-7Agefge42sw/AAAAAAAAAAI/AAAAAAAAAAA/ACHi3reWt8KI4nO_arpKCb4FzokaKnLgtg/mo/photo.jpg"
          />
          bendolly
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              class="item"
              href="/profile"
              role="option"
            >
              <i
                aria-hidden="true"
                class="user icon"
              />
              Profile
            </a>
            <a
              class="item"
              href="/logout"
              role="option"
            >
              <i
                aria-hidden="true"
                class="log out icon"
              />
              Logout
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="page"
  >
    <section
      id="study"
    >
      <div
        class="ui basic secondary segment"
      >
        <div
          class="ui container"
        >
          <small
            class="text-blue cursor-pointer noMargin"
          >
            <i
              aria-hidden="true"
              class="clock icon"
            />
            <span
              class="text-underline"
            >
              External study resources creation in progress. Click for details.
            </span>
          </small>
          <h1
            class="ui header mt-15"
          >
            benchmark extensible e-business
          </h1>
          <button
            class="ui tiny basic icon button"
          >
            <i
              aria-hidden="true"
              class="copy icon"
            />
            SD_8WX8QQ06
          </button>
        </div>
      </div>
      <div
        class="ui container"
      >
        <div
          class="ui pink pointing secondary menu"
        >
          <a
            aria-current="page"
            class="active item active"
            href="/study/SD_8WX8QQ06/basic-info/info"
          >
            Basic Info
          </a>
          <a
            class="item"
            href="/study/SD_8WX8QQ06/documents"
          >
            Documents
          </a>
          <a
            class="item"
            href="/study/SD_8WX8QQ06/cavatica"
          >
            Cavatica
          </a>
          <a
            class="item"
            href="/study/SD_8WX8QQ06/logs"
          >
            Logs
          </a>
        </div>
      </div>
    </section>
    <div
      class="ui basic vertical segment ui container"
    >
      <h2
        class="ui left floated header mt-6"
      >
        Study Basic Info
      </h2>
      <div
        class="ui icon negative message"
      >
        <i
          aria-hidden="true"
          class="warning circle icon"
        />
        <div
          class="content"
        >
          <div
            class="header"
          >
            Missing values
          </div>
          <p>
            Please add values to the following fields:
          </p>
          <div
            class="ui bulleted horizontal list"
            role="list"
          >
            <a
              class="item"
              href="/study/SD_8WX8QQ06/basic-info/info"
              role="listitem"
            >
              Study Short Name
            </a>
          </div>
        </div>
      </div>
      <div
        class="ui fluid top attached three steps"
      >
        <a
          class="active link step"
        >
          <i
            aria-hidden="true"
            class="info circular icon"
          />
          <div
            class="content"
          >
            <div
              class="title"
            >
              Info
            </div>
            <div
              class="description"
            >
              General Study Details
            </div>
            <div
              class="ui tiny warning progress progress-bar--custom"
              data-percent="66"
            >
              <div
                class="bar"
                style="width: 66.66666666666666%;"
              />
              <div
                class="label"
              >
                2/3 fields complete
              </div>
            </div>
          </div>
        </a>
        <a
          class="link step"
        >
          <i
            aria-hidden="true"
            class="disk circular icon"
          />
          <div
            class="content"
          >
            <div
              class="title"
            >
              External
            </div>
            <div
              class="description"
            >
              For dbGaP project
            </div>
            <div
              class="ui tiny warning progress progress-bar--custom"
              data-percent="33"
            >
              <div
                class="bar"
                style="width: 33.33333333333333%;"
              />
              <div
                class="label"
              >
                1/3 fields complete
              </div>
            </div>
          </div>
        </a>
        <a
          class="link step"
        >
          <i
            aria-hidden="true"
            class="calendar check circular icon"
          />
          <div
            class="content"
          >
            <div
              class="title"
            >
              Logistics
            </div>
            <div
              class="description"
            >
              Scheduling & Collection
            </div>
            <div
              class="ui tiny success progress progress-bar--custom"
              data-percent="100"
            >
              <div
                class="bar"
                style="width: 100%;"
              />
              <div
                class="label"
              >
                4/4 fields complete
              </div>
            </div>
          </div>
        </a>
      </div>
      <div
        class="ui clearing attached padded segment"
      >
        <form
          class="ui form"
        >
          <h4
            class="ui header text-wrap-75"
          >
            Please provide the study's full name and a shortened version that may be used for display purposes.
          </h4>
          <div
            class="required field"
          >
            <label
              class="noMargin"
            >
              Study Name
              :
            </label>
            <p
              class="noMargin"
            >
              <small>
                Full name of the study, often the full title of the X01 grant application.
              </small>
            </p>
            <div
              class="ui fluid input noMargin"
            >
              <input
                aria-label="name"
                name="name"
                type="text"
                value="benchmark extensible e-business"
              />
            </div>
          </div>
          <div
            class="field"
          >
            <label
              class="noMargin"
            >
              Study Short Name
              :
            </label>
            <p
              class="noMargin"
            >
              <small>
                The name that will appear under portal facets.
              </small>
            </p>
            <div
              class="ui error fluid left corner labeled input noMargin"
            >
              <div
                class="ui red label label left corner"
              >
                <i
                  aria-hidden="true"
                  class="asterisk icon"
                />
              </div>
              <input
                aria-label="shortName"
                name="shortName"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="field"
          >
            <label
              class="noMargin"
            >
              S3 Bucket
              :
            </label>
            <p
              class="noMargin"
            >
              <small>
                The s3 bucket where data for this study resides.
              </small>
            </p>
            <div
              class="ui fluid input noMargin"
            >
              <input
                aria-label="bucket"
                name="bucket"
                type="text"
                value="stay-wrong-ready"
              />
            </div>
          </div>
          <button
            class="ui icon right floated right labeled button"
            type="button"
          >
            <i
              aria-hidden="true"
              class="right arrow icon"
            />
            NEXT
          </button>
          <button
            class="ui primary right floated button"
            type="submit"
          >
            SAVE
          </button>
        </form>
      </div>
    </div>
  </div>
  <div
    class="ui segment footer"
  >
    <div
      class="ui container text-10"
    >
      <div
        class="ui horizontal list"
        role="list"
      >
        <div
          class="item"
          role="listitem"
        >
          <div
            class="ui basic horizontal label text-10"
          />
        </div>
        <div
          class="item"
          role="listitem"
        >
          UI
           
          <a
            href="https://github.com/kids-first/kf-ui-data-tracker/commit/undefined"
            rel="noopener noreferrer"
            target="_blank"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="ui page modals dimmer transition visible active"
    style="display: flex;"
  >
    <div
      class="ui small modal transition visible active"
    >
      <i
        aria-hidden="true"
        class="close icon"
      />
      <div
        class="header"
      >
        External Study Resources
      </div>
      <div
        class="content"
      >
        <div
          class="ui massive active centered inline loader"
        />
        <h2
          class="ui icon center aligned header"
        >
          Initializing Study Resources
          <div
            class="sub header"
          >
            We're setting up your new study resources, sit tight.
          </div>
        </h2>
        <div
          class="text-wrap-75 margin-x-auto mt-30 width-fit-content"
        >
          <div
            class="ui list"
            role="list"
          >
            <div
              class="item"
              role="listitem"
            >
              <i
                aria-hidden="true"
                class="green check icon noPadding"
              />
              <div
                class="content"
              >
                <div
                  class="header"
                >
                  Registered in Data Service: 
                  <code>
                    SD_8WX8QQ06
                  </code>
                </div>
              </div>
            </div>
            <div
              class="item"
              role="listitem"
            >
              <i
                aria-hidden="true"
                class="spinner loading icon noPadding"
              />
              <div
                class="content"
              >
                <div
                  class="header"
                >
                  Creating
                   storage bucket
                </div>
              </div>
              <div
                class="ui list ml-15"
                role="list"
              >
                <div
                  class="item"
                  role="listitem"
                >
                  <i
                    aria-hidden="true"
                    class="aws icon"
                  />
                  <div
                    class="content"
                  >
                    <code>
                      stay-wrong-ready
                    </code>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="item"
              role="listitem"
            >
              <i
                aria-hidden="true"
                class="spinner loading icon noPadding"
              />
              <div
                class="content"
              >
                <div
                  class="header"
                >
                  Creating
                   Cavatica analysis projects
                </div>
              </div>
              <div
                class="ui list ml-15"
                role="list"
              >
                <div
                  class="item"
                  role="listitem"
                >
                  <i
                    aria-hidden="true"
                    class="sliders horizontal icon"
                  />
                  <a
                    class="content"
                    href="https://cavatica.sbgenomics.com/u/zhux3/sd-8wx8qq06-bwa-mem"
                    target="_blank"
                  >
                    test study name bwa-mem 
                    <i
                      aria-hidden="true"
                      class="external small link icon"
                    />
                  </a>
                </div>
                <div
                  class="item"
                  role="listitem"
                >
                  <i
                    aria-hidden="true"
                    class="sliders horizontal icon"
                  />
                  <a
                    class="content"
                    href="https://cavatica.sbgenomics.com/u/zhux3/sd-8wx8qq06-gatk-haplotypecaller"
                    target="_blank"
                  >
                    test study name gatk-haplotypecaller 
                    <i
                      aria-hidden="true"
                      class="external small link icon"
                    />
                  </a>
                </div>
              </div>
            </div>
            <div
              class="item"
              role="listitem"
            >
              <i
                aria-hidden="true"
                class="spinner loading icon noPadding"
              />
              <div
                class="content"
              >
                <div
                  class="header"
                >
                  Creating
                   Cavatica delivery project
                </div>
              </div>
              <div
                class="ui list ml-15"
                role="list"
              >
                <div
                  class="item"
                  role="listitem"
                >
                  <i
                    aria-hidden="true"
                    class="paper plane outline icon"
                  />
                  <a
                    class="content"
                    href="https://cavatica.sbgenomics.com/u/zhux3/sd-8wx8qq06"
                    target="_blank"
                  >
                    test study name 
                    <i
                      aria-hidden="true"
                      class="external small link icon"
                    />
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="actions"
      >
        <small
          class="text-grey"
        >
          Skip ahead will not affect the study creation
        </small>
        <button
          class="ui small icon left labeled button"
        >
          <i
            aria-hidden="true"
            class="info icon"
          />
          Skip ahead to the study
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`renders new study view correctly 5`] = `
<body
  class=""
>
  <div
    class="ui large top attached menu"
  >
    <div
      class="ui container"
    >
      <div
        class="item"
      >
        <img
          alt="Kids First logo"
          src="test-file-stub"
        />
      </div>
      <a
        aria-current="page"
        class="header item"
        href="/"
      >
        Data Tracker
      </a>
      <a
        class="item"
        href="/"
      >
        Studies
      </a>
      <div
        class="right menu"
      >
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          Admin
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              class="item"
              href="/tokens"
              role="option"
            >
              <i
                aria-hidden="true"
                class="key icon"
              />
              Developer Tokens
            </a>
            <a
              class="item"
              href="/cavatica-projects"
              role="option"
            >
              <i
                aria-hidden="true"
                class="folder open icon"
              />
              Cavatica Projects
            </a>
            <a
              class="item"
              href="/events"
              role="option"
            >
              <i
                aria-hidden="true"
                class="history icon"
              />
              Event Log
            </a>
          </div>
        </div>
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          <img
            alt="bendolly"
            class="ui avatar image"
            src="https://lh3.googleusercontent.com/-7Agefge42sw/AAAAAAAAAAI/AAAAAAAAAAA/ACHi3reWt8KI4nO_arpKCb4FzokaKnLgtg/mo/photo.jpg"
          />
          bendolly
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              class="item"
              href="/profile"
              role="option"
            >
              <i
                aria-hidden="true"
                class="user icon"
              />
              Profile
            </a>
            <a
              class="item"
              href="/logout"
              role="option"
            >
              <i
                aria-hidden="true"
                class="log out icon"
              />
              Logout
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="page"
  >
    <section
      id="study"
    >
      <div
        class="ui basic secondary segment"
      >
        <div
          class="ui container"
        >
          <small
            class="text-blue cursor-pointer noMargin"
          >
            <i
              aria-hidden="true"
              class="clock icon"
            />
            <span
              class="text-underline"
            >
              External study resources creation in progress. Click for details.
            </span>
          </small>
          <h1
            class="ui header mt-15"
          >
            benchmark extensible e-business
          </h1>
          <button
            class="ui tiny basic icon button"
          >
            <i
              aria-hidden="true"
              class="copy icon"
            />
            SD_8WX8QQ06
          </button>
        </div>
      </div>
      <div
        class="ui container"
      >
        <div
          class="ui pink pointing secondary menu"
        >
          <a
            aria-current="page"
            class="active item active"
            href="/study/SD_8WX8QQ06/basic-info/info"
          >
            Basic Info
          </a>
          <a
            class="item"
            href="/study/SD_8WX8QQ06/documents"
          >
            Documents
          </a>
          <a
            class="item"
            href="/study/SD_8WX8QQ06/cavatica"
          >
            Cavatica
          </a>
          <a
            class="item"
            href="/study/SD_8WX8QQ06/logs"
          >
            Logs
          </a>
        </div>
      </div>
    </section>
    <div
      class="ui basic vertical segment ui container"
    >
      <h2
        class="ui left floated header mt-6"
      >
        Study Basic Info
      </h2>
      <div
        class="ui icon negative message"
      >
        <i
          aria-hidden="true"
          class="warning circle icon"
        />
        <div
          class="content"
        >
          <div
            class="header"
          >
            Missing values
          </div>
          <p>
            Please add values to the following fields:
          </p>
          <div
            class="ui bulleted horizontal list"
            role="list"
          >
            <a
              class="item"
              href="/study/SD_8WX8QQ06/basic-info/info"
              role="listitem"
            >
              Study Short Name
            </a>
          </div>
        </div>
      </div>
      <div
        class="ui fluid top attached three steps"
      >
        <a
          class="active link step"
        >
          <i
            aria-hidden="true"
            class="info circular icon"
          />
          <div
            class="content"
          >
            <div
              class="title"
            >
              Info
            </div>
            <div
              class="description"
            >
              General Study Details
            </div>
            <div
              class="ui tiny warning progress progress-bar--custom"
              data-percent="66"
            >
              <div
                class="bar"
                style="width: 66.66666666666666%;"
              />
              <div
                class="label"
              >
                2/3 fields complete
              </div>
            </div>
          </div>
        </a>
        <a
          class="link step"
        >
          <i
            aria-hidden="true"
            class="disk circular icon"
          />
          <div
            class="content"
          >
            <div
              class="title"
            >
              External
            </div>
            <div
              class="description"
            >
              For dbGaP project
            </div>
            <div
              class="ui tiny warning progress progress-bar--custom"
              data-percent="33"
            >
              <div
                class="bar"
                style="width: 33.33333333333333%;"
              />
              <div
                class="label"
              >
                1/3 fields complete
              </div>
            </div>
          </div>
        </a>
        <a
          class="link step"
        >
          <i
            aria-hidden="true"
            class="calendar check circular icon"
          />
          <div
            class="content"
          >
            <div
              class="title"
            >
              Logistics
            </div>
            <div
              class="description"
            >
              Scheduling & Collection
            </div>
            <div
              class="ui tiny success progress progress-bar--custom"
              data-percent="100"
            >
              <div
                class="bar"
                style="width: 100%;"
              />
              <div
                class="label"
              >
                4/4 fields complete
              </div>
            </div>
          </div>
        </a>
      </div>
      <div
        class="ui clearing attached padded segment"
      >
        <form
          class="ui form"
        >
          <h4
            class="ui header text-wrap-75"
          >
            Please provide the study's full name and a shortened version that may be used for display purposes.
          </h4>
          <div
            class="required field"
          >
            <label
              class="noMargin"
            >
              Study Name
              :
            </label>
            <p
              class="noMargin"
            >
              <small>
                Full name of the study, often the full title of the X01 grant application.
              </small>
            </p>
            <div
              class="ui fluid input noMargin"
            >
              <input
                aria-label="name"
                name="name"
                type="text"
                value="benchmark extensible e-business"
              />
            </div>
          </div>
          <div
            class="field"
          >
            <label
              class="noMargin"
            >
              Study Short Name
              :
            </label>
            <p
              class="noMargin"
            >
              <small>
                The name that will appear under portal facets.
              </small>
            </p>
            <div
              class="ui error fluid left corner labeled input noMargin"
            >
              <div
                class="ui red label label left corner"
              >
                <i
                  aria-hidden="true"
                  class="asterisk icon"
                />
              </div>
              <input
                aria-label="shortName"
                name="shortName"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="field"
          >
            <label
              class="noMargin"
            >
              S3 Bucket
              :
            </label>
            <p
              class="noMargin"
            >
              <small>
                The s3 bucket where data for this study resides.
              </small>
            </p>
            <div
              class="ui fluid input noMargin"
            >
              <input
                aria-label="bucket"
                name="bucket"
                type="text"
                value="stay-wrong-ready"
              />
            </div>
          </div>
          <button
            class="ui icon right floated right labeled button"
            type="button"
          >
            <i
              aria-hidden="true"
              class="right arrow icon"
            />
            NEXT
          </button>
          <button
            class="ui primary right floated button"
            type="submit"
          >
            SAVE
          </button>
        </form>
      </div>
    </div>
  </div>
  <div
    class="ui segment footer"
  >
    <div
      class="ui container text-10"
    >
      <div
        class="ui horizontal list"
        role="list"
      >
        <div
          class="item"
          role="listitem"
        >
          <div
            class="ui basic horizontal label text-10"
          />
        </div>
        <div
          class="item"
          role="listitem"
        >
          UI
           
          <a
            href="https://github.com/kids-first/kf-ui-data-tracker/commit/undefined"
            rel="noopener noreferrer"
            target="_blank"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;
